<resources>
    <string name="app_name">NewsApp</string>
    <string name="api_key">60254449737a48d3b0eff1beb1c81b1d</string>
    <string name="top_news">TopNews</string>
    <string name="categories">Categories</string>
    <string name="categories_text">Choose a category to start reading</string>
    <string name="saved">Saved</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
</resources>