<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="categoriesFragment"
            type="com.campusmap.android.wanted_preonboarding_android.category.Categories" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/categories_text"
        android:textSize="30sp"
        android:paddingStart="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/businessButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:drawableTop="@drawable/business"
        android:background="@drawable/categories_circle_button"
        android:text="@string/business"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/entertainButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:drawableTop="@drawable/entertainment"
        android:background="@drawable/categories_circle_button"
        android:text="@string/entertainment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generalButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/categories_circle_button"
        android:drawableTop="@drawable/general"
        android:text="@string/general"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/healthButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/categories_circle_button"
        android:drawableTop="@drawable/health"
        android:text="@string/health"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scienceButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/categories_circle_button"
        android:drawableTop="@drawable/science"
        android:text="@string/science"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sportsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/categories_circle_button"
        android:drawableTop="@drawable/sports"
        android:text="@string/sports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/techButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/categories_circle_button"
        android:drawableTop="@drawable/technology"
        android:text="@string/technology"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>